# toolchain

./: .babelrc  .env  .gitignore  AIFetch.js  buldwasm.sh  index.js  package-lock.json  package.json  rollup.config.js
cplus/: CMakeLists.txt  main.cpp  myjpeglib.cpp  setWasmToJsFileAsBase64.js  test.cpp
cplus/include/: myjpeglib.h
src/: index.js
src/effects/: removeBackground.js  up.js
src/helpers/: AIFetch.js  index.js
src/worker/: index.js
src/worker/removeBackground/: index.js
src/workers/: bulk.js  index.js
src/workers/removeBackground/: index.js
